# 4_bbws_webdev_workspace

./: .gitignore  CLAUDE.md
0_utilities/: .gitignore  HowToRun.txt  (+6 more)
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/: .dockerignore  .gitignore  Dockerfile  README.md  instructions.md  output.md  pyproject.toml  pytest.ini  requirements.txt
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/: __init__.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/dao/: __init__.py  order_dao.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/handlers/: __init__.py  update_order.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/models/: __init__.py  order.py  requests.py  responses.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/services/: __init__.py  order_service.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/src/utils/: __init__.py  exceptions.py  logger.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/tests/: __init__.py  conftest.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/tests/integration/: __init__.py  test_update_order_integration.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-4-update-order-lambda/tests/unit/: __init__.py  test_handler.py  test_models.py  test_order_dao.py  test_order_service.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/: .dockerignore  .gitignore  Dockerfile  README.md  instructions.md  output.md  pyproject.toml  pytest.ini  requirements.txt
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/src/dao/: __init__.py  order_dao.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/src/handlers/: __init__.py  order_pdf_creator.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/src/models/: __init__.py  billing_address.py  campaign.py  order.py  order_item.py  payment_details.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/src/services/: __init__.py  pdf_service.py  s3_service.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/src/utils/: __init__.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/tests/: __init__.py  conftest.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/tests/integration/: __init__.py  test_order_pdf_workflow.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-6-order-pdf-creator-lambda/tests/unit/: __init__.py  test_lambda_handler.py  test_models.py  test_order_dao.py  test_pdf_service.py  test_s3_service.py
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-7-internal-notification-lambda/: .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  instructions.md  output.md  pyproject.toml
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-7-internal-notification-lambda/templates/: order_notification.html
2_bbws_docs/project_plans/project-plan-3/stage-2-lambda-implementation/worker-7-internal-notification-lambda/tests/: __init__.py
(+1875 files in other folders)
